fixed auth + swagger
